# neovideo

./: .vimspector.json  Cargo.toml  LICENSE  README.md
neovideo/: Cargo.toml
neovideo/src/: main.rs
neovideo/src/egui_app/: egui_app.rs  mod.rs  winit_egui_event_listener.rs
neovideo_vlc/: Cargo.toml  build.rs
neovideo_vlc/lib/: NOTES.md  vlc.lib
neovideo_vlc/src/: lib.rs  vlc.rs  vlcvideo.rs
