[package]
name = "neovideo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neovideo_vlc = {path="../neovideo_vlc"}
winit = "0.26"
glutin = { version = "0.28.0", default-features = false, features = ["serde"] }
egui_glow = {git = "https://github.com/emilk/egui", features=["winit"], rev="9c26093fea926ce133fee3f6d3d92e19b37dc4ee"}
egui = {git = "https://github.com/emilk/egui", rev="9c26093fea926ce133fee3f6d3d92e19b37dc4ee"}
glow = "0.11.2"
